syntax = "proto3";
package mechain.sp;

import "gogoproto/gogo.proto";
import "mechain/sp/params.proto";
import "mechain/sp/types.proto";

option go_package = "github.com/evmos/evmos/v12/x/sp/types";

// GenesisState defines the sp module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this used by starport scaffolding # genesis/proto/state
  repeated StorageProvider storage_providers = 2 [(gogoproto.nullable) = false];
  repeated SpStoragePrice sp_storage_price_list = 3 [(gogoproto.nullable) = false];
}
